fix open-local-device-ssd mediaType Spelling mistakes

--- a/helm/templates/storage-class.yaml
+++ b/helm/templates/storage-class.yaml
@@ -57,7 +57,7 @@ provisioner: {{ .Values.driver }}
 parameters:
   csi.storage.k8s.io/fstype: ext4
   volumeType: Device
-  mediaType: sdd
+  mediaType: ssd
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
 allowVolumeExpansion: false
