--- a/helm/values-acka.yaml
+++ b/helm/values-acka.yaml
@@ -1,6 +1,6 @@
-name: open-local
+name: yoda
 namespace: kube-system
-driver: local.csi.aliyun.com
+driver: yodaplugin.csi.alibabacloud.com
 images:
   local:
     image: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local
@@ -21,14 +21,12 @@ images:
     image: ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/snapshot-controller
     tag: v4.2.1
 agent:
-  name: open-local-agent
-  # This block device will be used to create as a Volume Group in every node
-  # Open-Local does nothing if the device has been formatted or mountted
-  device: /dev/vdb
+  name: yoda-agent
   kubelet_dir: /var/lib/kubelet
-  volume_name_prefix: local
+  volume_name_prefix: yoda
+  extender_ip: 1.1.1.1
 extender:
-  name: open-local-scheduler-extender
+  name: yoda-scheduler-extender
   # scheduling strategy: binpack/spread
   strategy: spread
   # scheduler extender http port
@@ -36,22 +34,22 @@ extender:
   # you can also configure your kube-scheduler manually, see docs/user-guide/kube-scheduler-configuration.md to get more details
   init_job: true
 controller:
-  update_nls: "true"
+  update_nls: "false"
 storageclass:
   lvm:
-    name: open-local-lvm
+    name: yoda-lvm-default
   lvm_xfs:
-    name: open-local-lvm-xfs
+    name: yoda-lvm-xfs
   lvm_io:
-    name: open-local-lvm-io-throttling
+    name: yoda-lvm-io-throttling
   device_ssd:
-    name: open-local-device-ssd
+    name: yoda-device-ssd
   device_hdd:
-    name: open-local-device-hdd
+    name: yoda-device-hdd
   mountpoint_ssd:
-    name: open-local-mountpoint-ssd
+    name: yoda-mountpoint-ssd
   mountpoint_hdd:
-    name: open-local-mountpoint-hdd
+    name: yoda-mountpoint-hdd
 monitor:
   # install grafana dashboard
   enabled: false
