--- a/helm/templates/nlsc.yaml
+++ b/helm/templates/nlsc.yaml
@@ -11,8 +11,11 @@ spec:
       vgs:
         include:
         - {{ .Values.name }}-pool-[0-9]+
+        - yoda-pool[0-9]+
+{{- if .Values.agent.device }}
     resourceToBeInited:
       vgs:
       - devices:
         - {{ .Values.agent.device }}
         name: {{ .Values.name }}-pool-0
+{{- end }}
