--- a/helm/templates/scheduler-extender.yaml
+++ b/helm/templates/scheduler-extender.yaml
@@ -69,6 +69,9 @@ metadata:
   name: {{ .Values.name }}-scheduler-extender
   namespace: {{ .Values.namespace }}
 spec:
+{{- if .Values.agent.extender_ip }}
+  clusterIP: {{ .Values.agent.extender_ip }}
+{{- end }}
   selector:
     app: {{ .Values.name }}
     component: {{ .Values.name }}-scheduler-extender
