--- a/helm/templates/controller.yaml
+++ b/helm/templates/controller.yaml
@@ -44,7 +44,7 @@ spec:
         - controller
         - --initconfig={{ .Values.name }}
         - --feature-gates=UpdateNLS={{ .Values.controller.update_nls }}
-        image: {{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         imagePullPolicy: Always
         name: {{ .Values.name }}-controller
         resources:
