--- a/helm/templates/csi-provisioner.yaml
+++ b/helm/templates/csi-provisioner.yaml
@@ -28,7 +28,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: csi-provisioner
-          image: {{ .Values.images.provisioner.image }}:{{ .Values.images.provisioner.tag }}
+          image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.provisioner.image }}:{{ .Values.images.provisioner.tag }}
           args:
             - --csi-address=$(ADDRESS)
             - --volume-name-prefix={{ .Values.agent.volume_name_prefix }}
