--- a/helm/templates/csi-snapshotter.yaml
+++ b/helm/templates/csi-snapshotter.yaml
@@ -27,7 +27,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: csi-snapshotter
-          image: {{ .Values.images.snapshotter.image }}:{{ .Values.images.snapshotter.tag }}
+          image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.snapshotter.image }}:{{ .Values.images.snapshotter.tag }}
           args:
             - --csi-address=$(ADDRESS)
             - --snapshot-name-prefix=snap
