bugfix: slice bounds out of range when scoring

--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -8,8 +8,13 @@ metadata:
     app: {{ .Values.name }}
     component: {{ .Values.name }}-init-job
 spec:
+{{- if .Values.globalconfig.NumOfMasters }}
+  completions: {{ .Values.globalconfig.NumOfMasters }}
+  parallelism: {{ .Values.globalconfig.NumOfMasters }}
+{{- else }}
   completions: 3
   parallelism: 3
+{{- end }}
   template:
     metadata:
       labels:
@@ -33,7 +38,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
-              - key: app
+              - key: component
                 operator: In
                 values:
                 - {{ .Values.name }}-init-job
