--- a/helm/values-acka.yaml
+++ b/helm/values-acka.yaml
@@ -57,3 +57,4 @@ monitor:
 globalconfig:
   YodaSchedulerSvcIP: 10.96.0.4
   RegistryURL: ack-agility-registry.cn-shanghai.cr.aliyuncs.com
+  NumOfMasters: 5
