--- a/helm/templates/nlsc.yaml
+++ b/helm/templates/nlsc.yaml
@@ -12,6 +12,7 @@ spec:
         include:
         - {{ .Values.name }}-pool-[0-9]+
         - yoda-pool[0-9]+
+        - ackdistro-pool
 {{- if .Values.agent.device }}
     resourceToBeInited:
       vgs:
