bugfix: apk add xfsprogs-extra and blkid in Dockerfile

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,6 @@
-FROM alpine:3.16.2
+FROM alpine:3.6
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
-RUN apk update && apk upgrade && apk add util-linux coreutils xfsprogs e2fsprogs
+RUN apk update && apk upgrade && apk add util-linux coreutils xfsprogs xfsprogs-extra e2fsprogs blkid 
 COPY bin/open-local /bin/open-local
 ENTRYPOINT ["open-local"]
