--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -4,9 +4,9 @@ WORKDIR /go/src/github.com/alibaba/open-local
 COPY . .
 RUN make build && chmod +x bin/open-local
 
-FROM alpine:3.16.2@sha256:ed73e2bee79b3428995b16fce4221fc715a849152f364929cdccdc83db5f3d5c
+FROM alpine:3.6@sha256:25e814211fdda16b4e27e1483a5dfa17d7e958b8c539ee1ee942962c5d33d6de
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
-RUN apk update && apk upgrade && apk add util-linux coreutils xfsprogs e2fsprogs
+RUN apk update && apk upgrade && apk add util-linux coreutils xfsprogs xfsprogs-extra e2fsprogs blkid 
 COPY --from=builder /go/src/github.com/alibaba/open-local/bin/open-local /bin/open-local
 ENTRYPOINT ["open-local"]
