--- a/helm/templates/grafana.yaml
+++ b/helm/templates/grafana.yaml
@@ -808,3 +808,22 @@ metadata:
   name: {{ .Values.name }}
   namespace: {{ .Values.monitor.namespace }}
 {{- end }}
+---
+{{- if .Values.monitor.enabled }}
+apiVersion: monitoring.coreos.com/v1
+kind: ServiceMonitor
+metadata:
+  name: {{ .Values.name }}
+  namespace: {{ .Values.monitor.namespace }}
+spec:
+  endpoints:
+  - port: http-port
+    path: /metrics
+  jobLabel: app
+  namespaceSelector:
+    matchNames:
+    - {{ .Values.namespace }}
+  selector:
+    matchLabels:
+      app: {{ .Values.name }}
+{{- end }}
