--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -27,6 +27,7 @@ agent:
   device: /dev/vdb
   kubelet_dir: /var/lib/kubelet
   volume_name_prefix: local
+  kata: false
 extender:
   name: open-local-scheduler-extender
   # scheduling strategy: binpack/spread
@@ -48,10 +49,6 @@ storageclass:
     name: open-local-device-ssd
   device_hdd:
     name: open-local-device-hdd
-  mountpoint_ssd:
-    name: open-local-mountpoint-ssd
-  mountpoint_hdd:
-    name: open-local-mountpoint-hdd
 monitor:
   # install grafana dashboard
   enabled: false
