add migrate allocate info to pod， not nls
Signed-off-by: chzhj <blueheartcheng@gmail.com>

support framework_scheduler_names in chart

snapshot not init

Signed-off-by: chzhj <blueheartcheng@gmail.com>

add log

Signed-off-by: chzhj <blueheartcheng@gmail.com>

update helm chart

fix extand bug

Signed-off-by: chzhj <blueheartcheng@gmail.com>

fix extand bug

Signed-off-by: chzhj <blueheartcheng@gmail.com>

fix lint

Signed-off-by: chzhj <blueheartcheng@gmail.com>

--- a/helm/templates/agent.yaml
+++ b/helm/templates/agent.yaml
@@ -68,10 +68,8 @@ spec:
             cpu: 50m
             memory: 64Mi
         volumeMounts:
-{{- if .Values.agent.kata }}
         - mountPath: /var/tmp/
           name: spdk
-{{- end }}
         - mountPath: /dev
           mountPropagation: "HostToContainer"
           name: host-dev
@@ -150,22 +148,18 @@ spec:
           requests:
             cpu: 50m
             memory: 128Mi
-{{- if .Values.agent.kata }}
         lifecycle:
           postStart:
             exec:
               command: ["/bin/sh", "-c",
                         "/usr/sbin/iscsid || echo failed to start iscsid"]
-{{- end }}
         volumeMounts:
-{{- if .Values.agent.kata }}
         - mountPath: /var/tmp/
           name: spdk
         - mountPath: /var/run/kata-containers/vhost-user/block
           name: vhost
         - mountPath: /run/kata-containers/shared/direct-volumes
           name: directvolume
-{{- end }}
         - name: pods-mount-dir
           mountPath: /var/lib/kubelet
           mountPropagation: "Bidirectional"
@@ -181,17 +175,18 @@ spec:
           mountPropagation: Bidirectional
           name: sys
       volumes:
-{{- if .Values.agent.kata }}
       - name: spdk
         hostPath:
           path: /var/tmp/
+          type: DirectoryOrCreate
       - name: vhost
         hostPath:
           path: /var/run/kata-containers/vhost-user/block
+          type: DirectoryOrCreate
       - name: directvolume
         hostPath:
           path: /run/kata-containers/shared/direct-volumes
-{{- end }}
+          type: DirectoryOrCreate
       - name: host-dev
         hostPath:
           path: /dev
