Insure required directories exist on host

--- a/helm/templates/agent.yaml
+++ b/helm/templates/agent.yaml
@@ -177,12 +177,15 @@ spec:
       - name: spdk
         hostPath:
           path: /var/tmp/
+          type: DirectoryOrCreate
       - name: vhost
         hostPath:
           path: /var/run/kata-containers/vhost-user/block
+          type: DirectoryOrCreate
       - name: directvolume
         hostPath:
           path: /run/kata-containers/shared/direct-volumes
+          type: DirectoryOrCreate
       - name: host-dev
         hostPath:
           path: /dev
