fix node expand volume error and incorrect cache of extender

--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -7,6 +7,6 @@ RUN make build && chmod +x bin/open-local
 FROM alpine:3.6@sha256:25e814211fdda16b4e27e1483a5dfa17d7e958b8c539ee1ee942962c5d33d6de
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
-RUN apk update && apk upgrade && apk add util-linux coreutils xfsprogs xfsprogs-extra e2fsprogs blkid open-iscsi
+RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi
 COPY --from=builder /go/src/github.com/alibaba/open-local/bin/open-local /bin/open-local
 ENTRYPOINT ["open-local"]
