--- a/helm/templates/storage-class.yaml
+++ b/helm/templates/storage-class.yaml
@@ -2,6 +2,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ .Values.storageclass.lvm.name }}
+{{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
   volumeType: "LVM"
@@ -14,6 +15,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ .Values.storageclass.lvm_xfs.name }}
+{{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
   volumeType: "LVM"
@@ -26,6 +28,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ .Values.storageclass.lvm_io.name }}
+{{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
   csi.storage.k8s.io/fstype: ext4
@@ -40,6 +43,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ .Values.storageclass.device_hdd.name }}
+{{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
   csi.storage.k8s.io/fstype: ext4
@@ -53,6 +57,7 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: {{ .Values.storageclass.device_ssd.name }}
+{{ include "local.labels" . | indent 2 }}
 provisioner: {{ .Values.driver }}
 parameters:
   csi.storage.k8s.io/fstype: ext4
@@ -66,6 +71,7 @@ apiVersion: snapshot.storage.k8s.io/v1
 kind: VolumeSnapshotClass
 metadata:
   name: {{ .Values.storageclass.lvm.name }}
+{{ include "local.labels" . | indent 2 }}
 driver: {{ .Values.driver }}
 deletionPolicy: Delete
 parameters:
