add UT for csi controller server

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ bin/
 
 # Test binary, built with `go test -c`
 *.test
+covprofile
+*.html
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
