--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -44,8 +44,6 @@ storageclass:
     name: open-local-lvm
   lvm_xfs:
     name: open-local-lvm-xfs
-  lvm_io:
-    name: open-local-lvm-io-throttling
   device_ssd:
     name: open-local-device-ssd
   device_hdd:
@@ -55,5 +53,5 @@ monitor:
   enabled: false
   # grafana namespace
   namespace: monitoring
-globalconfig:
+global:
   RegistryURL: ack-agility-registry.cn-shanghai.cr.aliyuncs.com
