--- a/helm/templates/controller.yaml
+++ b/helm/templates/controller.yaml
@@ -29,7 +29,7 @@ spec:
           value: /var/lib/kubelet/plugins/{{ .Values.driver }}/csi.sock
         - name: TZ
           value: Asia/Shanghai
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.provisioner.image }}:{{ .Values.images.provisioner.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.provisioner.image }}:{{ .Values.images.provisioner.tag }}
         imagePullPolicy: Always
         resources:
           limits:
@@ -49,7 +49,7 @@ spec:
           value: /var/lib/kubelet/plugins/{{ .Values.driver }}/csi.sock
         - name: TZ
           value: Asia/Shanghai
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.resizer.image }}:{{ .Values.images.resizer.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.resizer.image }}:{{ .Values.images.resizer.tag }}
         imagePullPolicy: Always
         resources:
           limits:
@@ -70,7 +70,7 @@ spec:
           value: /var/lib/kubelet/plugins/{{ .Values.driver }}/csi.sock
         - name: TZ
           value: Asia/Shanghai
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.snapshotter.image }}:{{ .Values.images.snapshotter.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.snapshotter.image }}:{{ .Values.images.snapshotter.tag }}
         imagePullPolicy: Always
         resources:
           limits:
@@ -108,11 +108,11 @@ spec:
           value: "true"
         - name: ISSUE_MESSAGE_FILE
           value: "true"
-{{- if .Values.globalconfig.YodaSchedulerSvcIP }}
+{{- if .Values.global.YodaSchedulerSvcIP }}
         - name: EXTENDER_SVC_IP
-          value: "{{ .Values.globalconfig.YodaSchedulerSvcIP }}"
+          value: "{{ .Values.global.YodaSchedulerSvcIP }}"
 {{- end }}
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         imagePullPolicy: Always
         resources:
           limits:
@@ -129,7 +129,7 @@ spec:
         - controller
         - --initconfig={{ .Values.name }}
         - --feature-gates=UpdateNLS={{ .Values.controller.update_nls }}
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         imagePullPolicy: Always
         resources:
           limits:
@@ -142,7 +142,7 @@ spec:
         - name: TZ
           value: Asia/Shanghai
       - name: snapshot-controller
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.snapshot_controller.image }}:{{ .Values.images.snapshot_controller.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.snapshot_controller.image }}:{{ .Values.images.snapshot_controller.tag }}
         env:
           - name: TZ
             value: Asia/Shanghai
