--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -7,8 +7,8 @@ metadata:
 {{ include "local.labels" . | indent 2 }}
     app.kubernetes.io/component: {{ .Values.name }}-init-job
 spec:
-  completions: {{ or .Values.globalconfig.NumOfMasters 3 }}
-  parallelism: {{ or .Values.globalconfig.NumOfMasters 3 }}
+  completions: {{ or .Values.global.NumOfMasters 3 }}
+  parallelism: {{ or .Values.global.NumOfMasters 3 }}
   template:
     metadata:
 {{ include "local.labels" . | indent 6 }}
@@ -38,7 +38,7 @@ spec:
             topologyKey: "kubernetes.io/hostname"
       containers:
       - name: init
-        image: {{ .Values.globalconfig.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
+        image: {{ .Values.global.RegistryURL }}/{{ .Values.images.local.image }}:{{ .Values.images.local.tag }}
         command:
         - sh
         - "-c"
