--- a/helm/values-acka.yaml
+++ b/helm/values-acka.yaml
@@ -5,7 +5,7 @@ customLabels: {}
 images:
   local:
     image: ecp_builder/open-local
-    tag: v0.6.0-dev
+    tag: v0.6.0
   registrar:
     image: ecp_builder/csi-node-driver-registrar
     tag: v2.3.0
