fix: init-job pod anti-affinity label

--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -31,7 +31,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
-              - key: component
+              - key: app.kubernetes.io/component
                 operator: In
                 values:
                 - {{ .Values.name }}-init-job
