--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -7,6 +7,8 @@ RUN make build && chmod +x bin/open-local
 FROM alpine:3.9@sha256:f920ccc826134587fffcf1ddc6b2a554947e0f1a5ae5264bbf3435da5b2e8e61
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
-RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi
+RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi jq
 COPY --from=builder /go/src/github.com/alibaba/open-local/bin/open-local /bin/open-local
+# todo restic image
+COPY --from=restic/restic:0.12.0 /usr/bin/restic /usr/local/bin/restic
 ENTRYPOINT ["open-local"]
