--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,7 @@
 FROM alpine:3.9
 LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
-RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi
+RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi jq
 COPY bin/open-local /bin/open-local
+COPY --from=restic/restic:0.12.0 /usr/bin/restic /usr/local/bin/restic
 ENTRYPOINT ["open-local"]
