--- a/example/lvm/sts-nginx-snap.yaml
+++ b/example/lvm/sts-nginx-snap.yaml
@@ -28,12 +28,10 @@ spec:
       name: html
     spec:
       dataSource:
-        name: new-snapshot-test # 指定刚创建的VolumeSnapshot名称
+        name: volumesnapshot-A
         kind: VolumeSnapshot
         apiGroup: snapshot.storage.k8s.io
-      accessModes:
-        - ReadWriteOnce
-      storageClassName: open-local-lvm
+      storageClassName: example
       resources:
         requests:
           storage: 4Gi
