--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -9,6 +9,5 @@ LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
 RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi jq
 COPY --from=builder /go/src/github.com/alibaba/open-local/bin/open-local /bin/open-local
-# todo restic image
-COPY --from=restic/restic:0.12.0 /usr/bin/restic /usr/local/bin/restic
+COPY --from=ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local:tools /usr/local/bin/restic-arm64 /usr/local/bin/restic
 ENTRYPOINT ["open-local"]
