--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -3,5 +3,5 @@ LABEL maintainers="Alibaba Cloud Authors"
 LABEL description="open-local is a local disk management system"
 RUN apk update && apk upgrade && apk add util-linux coreutils e2fsprogs e2fsprogs-extra xfsprogs xfsprogs-extra blkid file open-iscsi jq
 COPY bin/open-local /bin/open-local
-COPY --from=ack-agility-registry.cn-shanghai.cr.aliyuncs.com/ecp_builder/open-local:tools /usr/local/bin/restic-amd64 /usr/local/bin/restic
+COPY --from=thebeatles1994/open-local:tools /usr/local/bin/restic-amd64 /usr/local/bin/restic
 ENTRYPOINT ["open-local"]
