add snapshot doc

--- a/helm/crds/snapshot.storage.k8s.io_volumesnapshotclasses.yaml
+++ b/helm/crds/snapshot.storage.k8s.io_volumesnapshotclasses.yaml
@@ -15,6 +15,9 @@ spec:
     listKind: VolumeSnapshotClassList
     plural: volumesnapshotclasses
     singular: volumesnapshotclass
+    shortNames:
+    - vsclass
+    - vsclasses
   scope: Cluster
   versions:
   - additionalPrinterColumns:
