--- a/helm/crds/snapshot.storage.k8s.io_volumesnapshotcontents.yaml
+++ b/helm/crds/snapshot.storage.k8s.io_volumesnapshotcontents.yaml
@@ -15,6 +15,9 @@ spec:
     listKind: VolumeSnapshotContentList
     plural: volumesnapshotcontents
     singular: volumesnapshotcontent
+    shortNames:
+    - vsc
+    - vscs
   scope: Cluster
   versions:
   - additionalPrinterColumns:
