--- a/helm/crds/snapshot.storage.k8s.io_volumesnapshots.yaml
+++ b/helm/crds/snapshot.storage.k8s.io_volumesnapshots.yaml
@@ -15,6 +15,8 @@ spec:
     listKind: VolumeSnapshotList
     plural: volumesnapshots
     singular: volumesnapshot
+    shortNames:
+    - vs
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
