change node-role label selector
The label `node-role.kubernetes.io/master` is deprecated after
kubernetes
1.18 by default.
change `node-role.kubernetes.io/master` to
`node-role.kubernetes.io/control-plane`

refer:
https://kubernetes.io/docs/reference/labels-annotations-taints/#node-role-kubernetes-io-master-taint
Signed-off-by: j4ckstraw <j4ckstraw@foxmail.com>

--- a/example/lvm/sts-io-throttling.yaml
+++ b/example/lvm/sts-io-throttling.yaml
@@ -40,7 +40,7 @@ spec:
         app: test-io-throttling
     spec:
       tolerations:
-        - key: node-role.kubernetes.io/master
+        - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
       containers:
