--- a/example/lvm/sts-nginx-snap.yaml
+++ b/example/lvm/sts-nginx-snap.yaml
@@ -43,7 +43,7 @@ spec:
         app: nginx-lvm-snap
     spec:
       tolerations:
-        - key: node-role.kubernetes.io/master
+        - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
       containers:
