--- a/helm/templates/init-job.yaml
+++ b/helm/templates/init-job.yaml
@@ -25,7 +25,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
             nodeSelectorTerms:
             - matchExpressions:
-              - key: node-role.kubernetes.io/master
+              - key: node-role.kubernetes.io/control-plane
                 operator: In
                 values:
                 - ""
