--- a/example/lvm/sts-block.yaml
+++ b/example/lvm/sts-block.yaml
@@ -40,7 +40,7 @@ spec:
         app: nginx-lvm-block
     spec:
       tolerations:
-        - key: node-role.kubernetes.io/master
+        - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
       containers:
