--- a/example/lvm/sts-minio.yaml
+++ b/example/lvm/sts-minio.yaml
@@ -49,7 +49,7 @@ spec:
       name: minio
     spec:
       tolerations:
-        - key: node-role.kubernetes.io/master
+        - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
       containers:
