--- a/example/lvm/sts-nginx.yaml
+++ b/example/lvm/sts-nginx.yaml
@@ -39,7 +39,7 @@ spec:
         app: nginx-lvm
     spec:
       tolerations:
-        - key: node-role.kubernetes.io/master
+        - key: node-role.kubernetes.io/control-plane
           operator: Exists
           effect: NoSchedule
       containers:
