--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -48,6 +48,8 @@ storageclass:
     name: open-local-lvm
   lvm_xfs:
     name: open-local-lvm-xfs
+  lvm_throttle:
+    name: open-local-lvm-io-throttle
   device_ssd:
     name: open-local-device-ssd
   device_hdd:
